Bug 13741 - "fileid:algorithm" setting "fsname_norootdir" is broken
Summary: "fileid:algorithm" setting "fsname_norootdir" is broken
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: File services (show other bugs)
Version: 4.8.0
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-01-14 09:05 UTC by Ralph Wuerthner
Modified: 2019-02-05 14:14 UTC (History)
1 user (show)

See Also:


Attachments
patch from master for 4.8 (1.24 KB, patch)
2019-01-16 10:55 UTC, Ralph Wuerthner
vl: review+
Details
patch from master for 4.9 (1.24 KB, patch)
2019-01-16 10:56 UTC, Ralph Wuerthner
vl: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralph Wuerthner 2019-01-14 09:05:41 UTC
The setting "fileid:algorithm" in VFS module fileid is broken when configuring algorithm "fsname_norootdir". The inode number for the share root directory is not set correctly.
Fixes are required for 4.8, 4.9, and master.
Comment 1 Ralph Wuerthner 2019-01-16 10:55:30 UTC
Created attachment 14772 [details]
patch from master for 4.8

Backport of fix from master to v4-8-stable.
Comment 2 Ralph Wuerthner 2019-01-16 10:56:59 UTC
Created attachment 14773 [details]
patch from master for 4.9

Backport of fix from master to v4-9-stable.
Comment 3 Volker Lendecke 2019-01-16 13:27:24 UTC
FYI: Waiting for the second patch to show up in master, it's pushed already
Comment 4 Volker Lendecke 2019-01-17 10:38:36 UTC
Both patches are reviewed by slow for master. The bug only has one review, but I think that should be ok.
Comment 5 Karolin Seeger 2019-01-31 10:02:40 UTC
Pushed to autobuild-v4-{9,8}-test.
Comment 6 Karolin Seeger 2019-02-05 14:14:16 UTC
(In reply to Karolin Seeger from comment #5)
Pushed to both branches.
Closing out bug report.

Thanks!